  inheriting or including a class belonging to a mutually-recursive module
  would previous behave incorrectly, and now results in a clean error.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #11879: Bugfix for Ctype.nondep_type
  (Stephen Dolan, review by Gabriel Scherer)

### Code generation and optimizations:

- #8998, #11321, #11430: change mangling of OCaml long identifiers
  from `camlModule__name_NNN` to `camlModule.name_NNN`.  The previous
  mangling schema, using `__`, was ambiguous.
  (Xavier Leroy, report by sliquister and Michael Bacarella,
   review by Gabriel Scherer)

- #10834: The -safer-matching option disables type-based optimizations of
  pattern-matching compilation. This allows to produce a match failure if
  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11686: Better spilling heuristic for the Linear Scan allocator for more
  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,
  Alain Frisch and Nathanaëlle Courant)

- #11904: Remove arm, i386 native-code backends.
  (Nicolás Ojeda Bär, review by Stephen Dolan, Anil Madhavapeddy, and Xavier
  Leroy)

### Standard library:

- #11883, #11884: Update documentation for In_channel and Out_channel
  with examples and sections to group related functions.
  (Kiran Gopinathan, review by Daniel Bünzli and Xavier Leroy)

- #11848: Add `List.find_mapi`, `List.find_index`, `Seq.find_mapi`,
  `Seq.find_index`, `Array.find_mapi`, `Array.find_index`,
  `Float.Array.find_opt`, `Float.Array.find_index`, `Float.Array.find_map`,